# agentic-kit

./: .gitignore  ATTRIBUTION.md  CONTRIBUTING.md  LOON.md  NOOL.md  OSS_IP_BOUNDARY.md  README.md  package-lock.json  package.json  pyproject.toml  test_live_context7.py
.github/workflows/: resonance.yml  tests.yml
agentic_kit/: __init__.py  circuit_breaker.py  context7_bridge.py  dispatchers.py  memory.py  model_fallback.py  reflection.py  safety.py  session_manager.py
data/: kural-embeddings.json
docs/: OUTPUT_HIERARCHY.md  openclaw_config_standard.md
docs/patterns/: gauge-propagation.md
ontology/: sko-schema.ttl
papers/Paper-C5-Agentic-Kit/: MANIFESTO.md  NOOL.md  RESEARCH_REQ.md  outline.md
src/: init.js  wisdom-bridge.js
src/core/: agency-types.js  event-bus.js  gauge-subscribers.js  index.js  wisdom-loader.js
src/traces/: wisdom-trace.js
test/: gauge-flow.test.js
tests/: __init__.py  test_circuit_breaker.py  test_context7_bridge.py  test_dispatchers.py  test_memory.py  test_reflection.py  test_safety.py
