[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-kit"
version = "0.1.0"
description = "Reusable agentic infrastructure for AI decision systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "SYNTHAI TECH PTY LTD", email = "oss@synthai.tech" }
]
keywords = [
    "ai",
    "agents",
    "llm",
    "decision-making",
    "memory",
    "circuit-breaker"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0"
]
http = [
    "requests>=2.28.0"
]
all = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
    "requests>=2.28.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/synthanai/agentic-kit"
Documentation = "https://github.com/synthanai/agentic-kit#readme"
Repository = "https://github.com/synthanai/agentic-kit"
Issues = "https://github.com/synthanai/agentic-kit/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentic_kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]
